<resources>
    <string name="app_name">Semaroam</string>
    <string name="landing_text_part1"><b>Siap untuk memulai !</b></string>
    <string name="landing_text_part2">Bersiaplah untuk menjelajahi\n tempat-tempat menarik di Semarang</string>
    <string name="started">Jelajahi sekarang</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_up">Daftar</string>
    <string name="username">Nama pengguna</string>
    <string name="password">Kata sandi</string>
    <string name="not_sign_up">belum punya akun?</string>
    <string name="already_sign_up">sudah punya akun?</string>
    <string name="name">Nama</string>
    <string name="hi">Hai,</string>
    <string name="explore">Jelajahi</string>
    <string name="detail">Detail</string>
    <string name="desc1">Kami telah merekomendasikan tempat tempat terbaik untuk anda, lihatlah dan jelajahi.</string>
    <string name="highlight">Highlight Event</string>
    <string name="welcome_message">Welcome to Home!</string>
    <string name="back">Kembali</string>
    <string name="profil">Profil</string>
    <string name="copyright">© 2024 Semaroam</string>
    <string name="logout">Keluar</string>
    <string name="search_hint">Apa yang anda cari ...</string>
    <string name="review">Ulasan</string>
    <string name="like">Suka</string>
    <string name="more">Explore semarang</string>
    <string name="foryou">Rekomendasi untukmu</string>
    <string name="category">Kategori</string>
    <string name="bahari">Jelajahi keindahan bawah laut dan pantai eksotis sekarang!</string>
    <string name="budaya">Temukan kekayaan tradisi dan seni lokal yang memukau!</string>
    <string name="cagar_alam">Kunjungi kawasan pelestarian dan lihat flora fauna langka!</string>
    <string name="taman_hiburan">Nikmati keseruan wahana dan atraksi menegangkan hari ini!</string>
    <string name="tempat_ibadah">Rasakan kedamaian dan spiritualitas di tempat ibadah bersejarah!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>