<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/secondary"
    android:id="@+id/main"
    tools:context=".view.start.HomeActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        app:strokeColor="@color/primary"
        android:layout_height="240dp"
        app:shapeAppearanceOverlay="@style/CustomCardShape"
        android:backgroundTint="@color/primary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textStyle="bold"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="@font/poppinsbold">
        </TextView>
    </com.google.android.material.card.MaterialCardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/et_profile"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginLeft="320dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/ic_profile"
            tools:ignore="ContentDescription,RtlHardcoded,SpeakableTextPresentCheck,TouchTargetSizeCheck">
        </ImageButton>

        <TextView
            android:id="@+id/tv_hi_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hi"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginTop="80dp"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/poppinsbold">
        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="120dp"
            android:layout_marginRight="20dp"
            android:text="@string/desc1"
            android:textColor="@color/white"
            android:textSize="14sp"
            tools:ignore="TextContrastCheck"
            android:fontFamily="@font/poppinsregular">
        </TextView>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="180dp">

            <!-- NestedScrollingChild goes here (NestedScrollView, RecyclerView, etc.). -->
            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/searchbar_scrolling_view_behavior"
                app:layout_behavior="@string/searchbar_scrolling_view_behavior">
                <!-- Screen content goes here. -->
            </androidx.core.widget.NestedScrollView>

            <com.google.android.material.search.SearchBar
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:hint="@string/search_hint" />

            <com.google.android.material.search.SearchView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:hint="@string/search_hint"
                app:layout_anchor="@id/search_bar">

                <!-- Search suggestions/results go here (ScrollView, RecyclerView, etc.). -->

            </com.google.android.material.search.SearchView>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/card">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/highlight"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:textSize="15sp"
                android:fontFamily="@font/poppinsbold">
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/bg_all_rounded"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp">

                    <ImageView
                        android:id="@+id/event_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lawangsewu"
                        android:scaleType="centerCrop" />

                </com.google.android.material.card.MaterialCardView>



                <TextView
                    android:id="@+id/event_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:text="Lawang Sewu"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/event_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="8dp"
                    android:text="Semarang"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/event_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="8dp"
                    android:text="09.00-17.00"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</RelativeLayout>