<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondary"
    tools:context=".view.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="0dp"
            android:layout_height="240dp"
            app:strokeColor="@color/primary"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:backgroundTint="@color/primary"
            app:shapeAppearanceOverlay="@style/CustomCardShape">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/baseline_arrow_back_24"
                android:contentDescription="@string/back"
                app:layout_constraintHorizontal_bias="0.33"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textStyle="bold"
                android:textSize="25sp"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:fontFamily="@font/poppinsbold"/>
        </com.google.android.material.card.MaterialCardView>


        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:layout_constraintTop_toBottomOf="@id/card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="-100dp"
            android:src="@drawable/bg_all_rounded"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/place_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nama Tempat:"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/image"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/place_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/place_name_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/city_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kota:"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/place_name"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/city_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Deskripsi:"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/city"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/description_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/category_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Kategori:"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/description"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/category_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/place_id_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="ID Tempat:"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/category"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/place_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/place_id_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/place_ratings_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rating Tempat:"
            android:textStyle="bold"
            android:textColor="@android:color/black"
            app:layout_constraintTop_toBottomOf="@id/place_id"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/place_ratings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/place_ratings_label"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="4dp"
            android:layout_marginStart="8dp"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/recommendation_title"
            android:layout_width="351dp"
            android:layout_height="49dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/rounded_box"
            android:padding="10dp"
            android:text="@string/foryou"
            android:textColor="@color/primary"
            android:textAlignment="center"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/place_ratings" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            app:layout_constraintTop_toBottomOf="@+id/place_ratings"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
